Added menu item

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#git">Git</a></li>
             <li><a href="#npm">NPM</a></li>
             <li><a href="#vsCode">VS Code</a></li>
+            <li>new item</li>
         </ul>
     </Nav>
     <!--documentation section-->
