added link to appbrewery

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <h3>Resources</h3>
         <ul>
             <li><a href="http://www.mashup-template.com/templates.html" target="_blank">Free Website Templates</a></li>
-            <li><a href="https://zerotomastery.io/resources/" target="_blank">Free Design Resources</a></li>
+            <li><a href="https://zerotomastery.io/resources/" target="_blank">Free Design Resources - ZeroToMastery</a></li>
+            <li><a href="https://www.appbrewery.co/p/web-development-course-resources/">Web Dev Resources - AppBrewery</a></li>
             <li><a href="https://www.favicon.cc/" target="_blank">Free Favicon Creator</a></li>
             <li><a href="https://loremipsum.io/" target="_blank">Free Lorem Ipsum Generator</a></li>
             <li><a href="https://www.flaticon.com/" target="_blank">Free Icons and Stickers</a></li>
