added description to documents link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
         <h3>IDE</h3>
         <ul>
-            <li><a href="https://codepen.io/" target="_blank">Free Online Editor for HTML CSS JS</a></li>
+            <li><a href="https://codepen.io/" target="_blank">CodePen - Free Online Editor for HTML CSS JS</a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
